done so much, its pretty much usable by now

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -1,3 +1,20 @@
 .btn-group
   .v-btn
     border-radius: 0
+
+// .v-sheet
+//   background: red !important
+
+.v-input
+  &.no-details
+    .v-text-field__details
+      display: none
+
+.v-btn
+  &.xx-small
+    height: 32px
+    min-width: 32px
+
+
+.view-false
+  display: none !important
