i think i finished alpha

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -18,3 +18,31 @@
 
 .view-false
   display: none !important
+
+
+/* width */
+::-webkit-scrollbar
+  width: 5px
+  height: 5px
+
+
+/* Track */
+::-webkit-scrollbar-track
+  background: #424242
+
+ 
+/* Handle */
+::-webkit-scrollbar-thumb
+  background: #000
+
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover
+  background: #757575
+
+.shortkey-buttons
+  // display: flex !important
+  display: none !important
+
+.v-navigation-drawer--fixed
+    z-index: 100 !important
