compat changes for json

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -46,3 +46,9 @@
 
 .v-navigation-drawer--fixed
     z-index: 100 !important
+
+
+
+@media (max-width: 1264px)
+  .v-tooltip__content
+    display: none !important
